[package]
name = "tokenz"
version = "0.1.0"
authors = ["epwalsh <epwalsh10@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[[bin]]
name = "tokenize"
path = "src/main.rs"
bench = false

[dependencies]
regex = "1.2.1"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "my_benchmark"
harness = false
