[package]
name = "tokenizers"
version = "0.2.0"
authors = ["epwalsh <epwalsh10@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Lightweight tokenizers with a simple CLI"
readme = "README.md"
homepage = "https://github.com/epwalsh/tokenizers"
repository = "https://github.com/epwalsh/tokenizers"
keywords = ["cli", "tokenizer", "token", "nlp"]
categories = ["command-line-utilities"]

[lib]
bench = false

[[bin]]
name = "tokenize"
path = "src/main.rs"
bench = false

[dependencies]
regex = "1.2.1"
structopt = "0.2.18"
failure = "0.1"
exitfailure = "0.5.1"
indicatif = "0.11"

[dev-dependencies]
criterion = "0.2"
assert_cmd = "0.10"
predicates = "1"

[[bench]]
name = "tokenize_benchmark"
harness = false
