[package]
name = "tokenizers"
version = "0.5.0"
authors = ["epwalsh <epwalsh10@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Provides a generic Tokenizer trait and a smart Token struct"
readme = "README.md"
homepage = "https://github.com/epwalsh/tokenizers"
repository = "https://github.com/epwalsh/tokenizers"
keywords = ["tokenizer", "token", "nlp"]
categories = ["text-processing"]

[[example]]
name = "cli"

[dev-dependencies]
structopt = "0.2.18"
failure = "0.1"
exitfailure = "0.5.1"
indicatif = "0.11"
